# monad-presentation

./: README  README.md  cloudeval.cabal
src/: Limits.hs  TempFile.hs  Types.hs  cloudeval.hs
static/: index.html
static/css/: codemirror.css  elegant.css  haskell.css  main.css  popover.css
static/css/theme/: default.css
static/js/: cloudeval.js  impress.js  slide_config.js  slides.js
static/js/ace/: ace.js
static/template/: haskell.html
