name:
  cloudeval
version:
  0.1.0.0
synopsis:
  Evaluates whole Haskell "files" online
-- description:
license:
  GPL-3
license-file:
  LICENSE
author:
  David Flemström
maintainer:
  david.flemstrom@gmail.com
copyright:
  Copyright © 2013 by David Flemström
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.8

executable cloudeval
  hs-source-dirs:
    src
  main-is:
    cloudeval.hs
  ghc-options:
    -Wall
    -threaded
    -with-rtsopts=-N
    -funbox-strict-fields
    -O2
    -fllvm
    -optc-O4
    -optc-flto
  -- other-modules:
  build-depends:
      base ==4.6.*
    , aeson ==0.6.*
    , base64-bytestring ==1.0.*
    , bytestring ==0.10.*
    , deepseq ==1.3.*
    , deepseq-th ==0.1.*
    , directory ==1.2.*
    , ghc ==7.6.*
    , hack2-contrib ==2014.5.19.1
    , hack2-handler-snap-server ==2012.1.19
    , hint ==0.3.3.8
    , miku ==2014.5.19
    , mtl ==2.1.*
    , parsec ==3.1.*
    , split ==0.2.*
    , text ==0.11.*
    , transformers ==0.3.*
    , unordered-containers ==0.2.*
